<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/ic_catalog"
        android:title="@string/title_catalog"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_basket"
        android:title="@string/title_basket"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_sales"
        android:icon="@drawable/ic_sales"
        android:title="@string/title_sales"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />
</menu>
