<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/personal_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_brand_background"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="18dp"
            android:contentDescription="@string/title_profile"
            android:src="@drawable/ic_profile" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="A`PIEU" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/category_item"
                android:textSize="@dimen/signature_in_the_cabinet"
                tools:text="A`PIEU" />
        </LinearLayout>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center|end"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_brand_background"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="18dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_heart" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/countOfItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/category_item"
                android:textSize="@dimen/signature_in_the_cabinet"
                tools:text="A`PIEU" />
        </LinearLayout>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center|end"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_brand_background"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="18dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_shop" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shops"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center|end"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_brand_background"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="18dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_chat" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feedback"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center|end"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_brand_background"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="18dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_document" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/offer"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center|end"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_brand_background"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="18dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_back_item" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/return_of_the_product"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center|end"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>